--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <div class="timer">
-      <div class="timer_controls">
-        <button data-timer="" class="timer_btn">5 Min</button>
-        <button data-timer="" class="timer_btn">10 Min</button>
-        <button data-timer="" class="timer_btn">20 Min</button>
-        <button data-timer="" class="timer_btn">Lunch</button>
-        <button data-timer="" class="timer_btn">1:1</button>
-        <form name="time_input" id="timeInput">
-          <input type="text" name="minutes" placeholder="Enter Minutes" />
-        </form>
-      </div>
-      <div class="display">
-        <h1 class="display_countdown"></h1>
-        <p class="display_return-time"></p>
+    <div class="container">
+      <div class="timer">
+        <div class="timer_controls">
+          <button data-timer="300" class="timer_btn">5 min</button>
+          <button data-timer="600" class="timer_btn">10 min</button>
+          <button data-timer="1200" class="timer_btn">20 min</button>
+          <button data-timer="1800" class="timer_btn">lunch</button>
+          <button data-timer="900" class="timer_btn">1:1</button>
+          <form name="time_input" id="timeInput">
+            <input type="text" name="minutes" placeholder="Enter Minutes" />
+          </form>
+        </div>
+        <div class="display">
+          <h1 class="display_countdown">4:43</h1>
+          <p class="display_return-time">be back at 12:41</p>
+        </div>
       </div>
     </div>
   </body>
