basic display of time remaining

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </form>
         </div>
         <div class="display">
-          <h1 class="display_countdown">4:43</h1>
+          <h1 class="display_countdown"></h1>
           <p class="display_return-time">be back at 12:41</p>
         </div>
       </div>
