create return time display

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="display">
           <h1 class="display_countdown"></h1>
-          <p class="display_return-time">be back at 12:41</p>
+          <p class="display_return-time"></p>
         </div>
       </div>
     </div>
