fix data-time and add addEventListeners

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div class="container">
       <div class="timer">
         <div class="timer_controls">
-          <button data-timer="300" class="timer_btn">5 min</button>
-          <button data-timer="600" class="timer_btn">10 min</button>
-          <button data-timer="1200" class="timer_btn">20 min</button>
-          <button data-timer="1800" class="timer_btn">lunch</button>
-          <button data-timer="900" class="timer_btn">1:1</button>
+          <button data-time="300" class="timer_btn">5 min</button>
+          <button data-time="600" class="timer_btn">10 min</button>
+          <button data-time="1200" class="timer_btn">20 min</button>
+          <button data-time="1800" class="timer_btn">lunch</button>
+          <button data-time="900" class="timer_btn">1:1</button>
           <form name="time_input" id="timeInput">
             <input type="text" name="minutes" placeholder="Enter Minutes" />
           </form>
