--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown Timer</title>
+    <link rel="shortcut icon" type="image/png" href="./imgs/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,600;1,400&display=swap"
       rel="stylesheet"
