getting stop and restart buttons

--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
           <button data-time="1200" class="timer_btn">20 min</button>
           <button data-time="1800" class="timer_btn">lunch</button>
           <button data-time="900" class="timer_btn">1:1</button>
-          <form name="time_input" id="timeInput">
-            <input type="text" name="minutes" placeholder="Enter Minutes" />
-          </form>
         </div>
-        <div class="display">
-          <h1 class="display_countdown"></h1>
-          <p class="display_return-time"></p>
+      </div>
+      <div class="display">
+        <h1 class="display_countdown"></h1>
+        <p class="display_return-time"></p>
+      </div>
+      <div class="buttons">
+        <button class="stop-btn" disabled>STOP</button>
+        <form name="time_input" id="timeInput">
+          <input type="text" name="minutes" placeholder="Enter Minutes" >
+        </form>
+          <button class="reset-btn" disabled>RESET</button>
         </div>
       </div>
     </div>
